--- a/squid.conf
+++ b/squid.conf
@@ -5,9 +5,9 @@ http_access allow url1
 http_access allow url2
 http_access allow url3
 http_access allow payload
-#ª‘¥Proxy “∏“√≥–
+#Proxy Close
 http_access deny all
-#‡ª‘¥Proxy “∏“√≥–
+#Proxy Open
 #http_access allow all
 http_port 8080
 http_port 80
