--- a/squid.conf
+++ b/squid.conf
@@ -1,6 +1,7 @@
 acl url1 url_regex -i 127.0.0.1
 acl url2 url_regex -i localhost
 acl url3 url_regex -i XXX.XXX.XXX.XXX
+acl payload url_regex -i "/etc/squid3/payload.txt"
 http_access allow url1
 http_access allow url2
 http_access allow url3
